@@ -70,8 +70,12 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
                     <mainClass>com.kuroyale.Main</mainClass>
                 </configuration>
+
             </plugin>
         </plugins>
     </build>
